unified_tests/builtins/assert_literal_false_condition/expect/build.text.stderr
main.bin.copp:2:12: error: assert condition is always false; use abort("...") for unrecoverable failures
      assert(false)
             ^
